Bug 393002 - ""Server not found" message for view-source window doesn't display server name" [p=anant@kix.in (Anant Narayanan) r=bsmedberg sr=bzbarsky a1.9=damons]